	- Remove unneeded AC_DEFINE_UNQUOTED from ONCHANGE_SCRIPT in configure
	- Port remaining spamassassin code from 5.5 branch to stable-5_4.
	- Add new --enable-maildrop option, and new NO_MAILDROP bit flag. 
	- New Documentation: README.maildrop, README.spamassassin
	- Sample maildroprc files for both 1.x and 2.x (maildrop/*)

	Fabio Busatto
	- #include <stdio.h> at top of vpopmail.h

5.4.18 - released 30-Dec-06

        Joshua Megerman (offsides)
        - SQL backend fixes - NOTE: Requires database changes.  
          See UPGRADE for 5.4.18.  [1619489]
        - MySQL Tablename Backquotes - Add back quotes around table
          names so MySQL will allow names that start with a digit.
          [1619491]

	Drew
	- add .qmail-extension ability to vdelivermail
	- mods to Delivered-To: header to support .qmail-extension

	John Simpson
	- onchange - call a script when users or domains are changed
          see README.onchange.
        - cslogin - Compact and silent login options for vpopmaild
          note: don't blame John for problems in this, I changed a
          lot to make it fit with other changes. rww

	Tijs Zwinkels
	- vmysql: add missing mysql_free_result to fix mem leak.

	Tom Collins
	- vdelivermail: Add missing loop check.
	- vchangepw: Minor changes to Peter's error checking. [1573277]

	Rick Widmer  (rwidmer)
	- Multiple changes to vpopmaild:
	  Add rename_file command.
	  Expert mode works in vmoduser.     
	  Commands that are not yet implemented say so.
	  Blank input lines are not an error in vpopmaild.
	  Separate help before and after login in vpopmaild.
	  Allow 3 tries to login to vpopmaild.
	  Clean up if add_user fails because of bad user data.
	  Add termination code (.) to get_lastauth return.
	  Number the error messages (XXX) in vpopmaild
	  If invalid option is sent in set_limits, show warning
	- Add various patches from others listed below:

	Peter Pentchev (roamer)
	- Various sanity checks and minor optimizations [1573292]